--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
     "native-base": "^3.4.15",
     "react": "18.1.0",
     "react-native": "0.70.0",
-    "react-native-safe-area-context": "^3.3.2",
+    "react-native-safe-area-context": "^3.4.1",
+    "react-native-screens": "^3.17.0",
     "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
